# include $(top_srcdir)/Makefile.paths

# configuration location
configdir=${aa_sysconfdir}

nobase_config_DATA=default.cfg master.srv settings.cfg\
	subcultures.srv\
	settings_visual.cfg\
	settings_dedicated.cfg aiplayers.cfg rc.config\
    settings_authentication.cfg\
	keys_cursor.cfg   keys_wasd.cfg  keys_zqsd.cfg\
    keys_twohand.cfg  keys_x.cfg\
    examples/breakfast_in_hell.cfg examples/single_use_turbo.cfg\
	examples/fortress_soccer.cfg examples/death_zone.cfg\
	examples/cvs_test/fortress_physics.cfg examples/cvs_test/fortress_scoring.cfg\
	examples/cvs_test/fortress_politics.cfg\
	examples/cvs_test/fortress_complete.cfg examples/cvs_test/sumo_complete.cfg\
	examples/teamsumo.cfg

EXTRA_DIST=${nobase_config_DATA}
