# include $(top_srcdir)/Makefile.paths

# configuration location
configdir=${aa_sysconfdir}

nobase_config_DATA=default.cfg master.srv settings.cfg\
	settings_dedicated.cfg aiplayers.cfg rc.config\
	subcultures.srv\
	settings_visual.cfg\
	uphillbothways.cfg\
	serverconfigcache.cfg\
    settings_authentication.cfg\
	sdl1/default.cfg\
	sdl1/keys_cursor.cfg   sdl1/keys_wasd.cfg  sdl1/keys_zqsd.cfg\
	sdl1/keys_twohand.cfg  sdl1/keys_x.cfg sdl1/keys_cursor_single.cfg\
	sdl2/default.cfg\
	sdl2/keys_cursor.cfg   sdl2/keys_wasd.cfg\
	sdl2/keys_twohand.cfg  sdl2/keys_x.cfg sdl2/keys_cursor_single.cfg\
	zonestyle_vertical.cfg zonestyle_flat.cfg zonestyle_combined.cfg\
    examples/breakfast_in_hell.cfg examples/single_use_turbo.cfg\
	examples/fortress_soccer.cfg examples/death_zone.cfg\
	examples/cvs_test/fortress_physics.cfg examples/cvs_test/fortress_scoring.cfg\
	examples/cvs_test/fortress_politics.cfg\
	examples/cvs_test/fortress_complete.cfg examples/cvs_test/sumo_complete.cfg\
	examples/teamsumo.cfg

EXTRA_DIST=${nobase_config_DATA}
