# include $(top_srcdir)/Makefile.paths

# desktop files location
desktopfiledir=${aa_datadir}/desktop

# files for desktop integration
nobase_desktopfile_DATA=armagetronad.desktop \
	icons/16x16/armagetronad.png icons/32x32/armagetronad.png icons/48x48/armagetronad.png \
	armagetronad.appdata.xml

EXTRA_DIST=icons/16x16/armagetronad.png\
           icons/32x32/armagetronad.png\
		   icons/48x48/armagetronad.png\
		   armagetronad.desktop.in\
		   armagetronad.appdata.xml.in
